# grid-dispatch-agent

./: .env.example  .gitignore  01 PRD.md  02 HLD.md  03 LLD.md  DEPLOY.md  Dockerfile  README.md  demo.py  demo_extended.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker-build.yml  test-build.yml
api/: dispatch_api.py  flood_api.py  openapi_v1.py  server.py  stream_output.py
docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md
docs/业务接口文档/: 测试地址.txt
docs/业务接口文档/接口说明/: 修改约束接口说明.txt  发布计划接口说明.txt  读取电网下达计划接口.txt  调度计算接口说明.txt
grid_agent/: __init__.py  agent.py  cli.py
grid_agent/data/: __init__.py  mock_data.py  plan_models.py
grid_agent/flow/: __init__.py  dispatch_flows.py  engine.py
grid_agent/llm/: __init__.py  adapter.py
grid_agent/output/: __init__.py  formatter.py
grid_agent/skill/: __init__.py  base.py  registry.py
grid_agent/skills/: __init__.py  calc_reserve_skill.py  data_fetch_skill.py  expert_infer_skill.py  output_json_skill.py
grid_agent/skills/dispatch/: __init__.py  daily_plan_skill.py  inflow_adjust_skill.py  intraday_skill.py  maintenance_skill.py  peak_support_skill.py  plan_update_skill.py
grid_agent/skills/integration/: __init__.py  flood_control_skill.py  grid_api_executor.py  grid_api_skill.py  real_api_skills.py  real_flow_skill.py
grid_agent/skills/llm_enhanced/: __init__.py  base.py  daily_plan.py  inflow_adjust.py  intraday.py  maintenance.py  peak_support.py  plan_update.py
grid_agent/utils/: __init__.py
tests/: test_grid_agent.py  test_real_api.py
