[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grid-dispatch-agent"
version = "1.0.0"
description = "轻量化通用智能Agent框架，通过Skill机制实现业务定制"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "SpeedOnline", email = "467718583@qq.com"}
]
keywords = ["agent", "ai", "llm", "skill", "automation", "grid-dispatch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
word = [
    "python-docx>=0.8.11",
]

[project.scripts]
grid-agent = "grid_agent.cli:main"

[project.urls]
Homepage = "https://github.com/467718584/grid-dispatch-agent"
Repository = "https://github.com/467718584/grid-dispatch-agent"

[tool.setuptools.packages.find]
where = ["."]
include = ["grid_agent*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
